[package]
name = "push-back"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
nalgebra = { version = "0.34.0", default-features = false }
vexide = "0.7.0"
