[package]
name = "push-back"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
ryu = "1.0.20"
vexide = "0.7.0"
